--- a/package.json
+++ b/package.json
@@ -12,5 +12,20 @@
     "file-mock": "^1.0.0",
     "git-tag-version": "^1.3.1",
     "totoboto4": "github:totobono4/totoboto4"
-  }
+  },
+  "name": "@totoboto4-module/totoboto4-module-example",
+  "description": "This template is used for creating modules for the [totoboto4 Discord Bot](https://github.com/totobono4/totoboto4).   You can clone `totoboto4` and add any modules anyone will create with this.",
+  "version": "1.0.0",
+  "main": "module.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/totobono4/totoboto4-module-example.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/totobono4/totoboto4-module-example/issues"
+  },
+  "homepage": "https://github.com/totobono4/totoboto4-module-example#readme"
 }
