--- a/package.json
+++ b/package.json
@@ -4,28 +4,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "discord.js": "^13.1.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.4.0",
-    "file-mock": "^1.0.0",
-    "git-tag-version": "^1.3.1",
-    "totoboto4": "github:totobono4/totoboto4"
-  },
-  "name": "@totoboto4-module/totoboto4-module-example",
-  "description": "This template is used for creating modules for the [totoboto4 Discord Bot](https://github.com/totobono4/totoboto4).   You can clone `totoboto4` and add any modules anyone will create with this.",
-  "version": "1.0.0",
-  "main": "module.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/totobono4/totoboto4-module-example.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/totobono4/totoboto4-module-example/issues"
-  },
-  "homepage": "https://github.com/totobono4/totoboto4-module-example#readme"
+    "git-tag-version": "^1.3.1"
+  }
 }
